    config is loaded.

2008-12-03 cjg
 * Some clean up to the way search forms are rendered. Fixes #3433 and #2777.
 * Added show_help option to search configuration to allow help to be hidden
    or always shown (rather than toggled.)
 * Added css for table cells which are dependant on javascript being 
    available. (using display: block caused render errors)

2008-12-03 tdb
 * Only update entities.dtd if it is out of date

2008-12-03 cjg
 * Minor tweak to last submission to use Utils::mtime for clarity.

2008-12-04 cjg
 * Fixed bug in workflow which meant it assumed the primary key was "eprintid"
    even on the user dataset. Resolving #3403.
 * Trivial documentation fix, closing #3454.
 * Fixed bug in creating a static .html from a .xhtml file. Fixes #3390. 
 * Now when you add a document or modify one, it's always unrolled when the
    form renders just after. Closes #2938.
 * Fixed jitters on help when it unfearls using javascript.
 * Document fields can now be marked as required, and will have the star
    appear and report problems if not set. Fixes #3195
 * Can now use <upload-methods> option in upload component config to set which
    methods are available to upload files (or set to none to stop new 
    documents being created). Fixing #3450
 * Fixed some non-i18l phrases in Upload.
 * Less confusing error message for missing citation files. Fixes #3369.
 
2008-12-04 cjg
 * Fixed oddity that toolbox.pm defined toolkit.pm. Closes #3464

2008-12-05 cjg
 * Fixed issue with level one menu title phrases. This appears to fix #3466.

2008-12-05 tdb
 * Always test "index.html" when deciding whether to update abstract page,
    fixing #3479

2008-12-05 cjg
 * Counts on view-by-name were broken, now not. Fixed #3477.
 * Links to empty pages are now rendered as text, not links. Fixes #3476.
 * Browse by name no longer spits warnings if given part isn't there. #3478

2008-12-08 tdb
 * Use get_plugin_class to determine the Plugin class, fixes #3428
