@@ -7848,4 +7848,6 @@ EPRINTS-3.1.1
 
 2008-12-08 tdb
  * Use get_plugin_class to determine the Plugin class, fixes #3428
+ * Fixed EPrints invalid user errors when starting indexer from apache
+ * Fixed double-URLs in RSS2 media output
 
